change in backend

--- a/frontend/portfolio-builder.html
+++ b/frontend/portfolio-builder.html
@@ -169,6 +169,11 @@
                                 <span>Bonds</span>
                             </label>
                             <label class="preference-option">
+                                <input type="checkbox" name="preferences" value="mutual-funds">
+                                <i class="fas fa-funnel-dollar"></i>
+                                <span>Mutual Funds</span>
+                            </label>
+                            <label class="preference-option">
                                 <input type="checkbox" name="preferences" value="etfs">
                                 <i class="fas fa-boxes"></i>
                                 <span>ETFs</span>
